OO-4956: allow to desactive absence and lectures reasons